k8s/media-services/rdtclient/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rdtclient
  namespace: media-services
  labels:
    app: rdtclient
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: rdtclient
